--- a/package.json
+++ b/package.json
@@ -1,10 +1,5 @@
 {
-  "homepage": "https://venkeyp333.github.io/Venky-Portfolio",
-
-
-
-  
-
+  "homepage": "https://venkeyp333.github.io/appleClone",
   "name": "apple",
   "private": true,
   "version": "0.0.0",
